--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "my-portfolio",
   "version": "1.0.0",
   "private": true,
-  "homepage": "https://<GitHub-username>.github.io/<repo-name>",
+  "homepage": "https://Kim-yongki.github.io/personal-homepage",
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
@@ -11,10 +11,10 @@
     "gh-pages": "^6.1.1",
     "esbuild": "^0.23.0"
   },
-  "scripts": {
-    "start": "npx serve -s build -l 3000",
-    "build": "npx esbuild src/index.js --bundle --outfile=build/assets/bundle.js --define:process.env.NODE_ENV='\"production\"' --minify && if not exist build mkdir build && copy /Y public\\index.html build\\index.html && (if exist public\\404.html copy /Y public\\404.html build\\404.html) && (if exist public copy /Y public\\* build\\ 1>nul 2>nul)",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
-  }
+"scripts": {
+  "build": "npx esbuild src/index.js --bundle --outfile=build/assets/bundle.js --define:process.env.NODE_ENV='\"production\"' --minify --loader:.js=jsx && if not exist build mkdir build && copy /Y public\\index.html build\\index.html && (if exist public\\404.html copy /Y public\\404.html build\\404.html) && (if exist public copy /Y public\\* build\\ 1>nul 2>nul)",
+  "predeploy": "npm run build",
+  "deploy": "gh-pages -d build"
+}
+
 }
